# coding-agent

./: .env.example  .gitignore  AZURE_DEPLOYMENT.md  Dockerfile  Dockerfile.ci  Dockerfile.hpc  LICENSE  OPTIMIZATION_REVIEW.md  README.md  RECETTE_SEISMIC.md  TRANSFORMATION.md  TUTORIAL_IDE.md  apptainer.def  batch_audit.sh  bencher_report.json  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-azure.yml  jax-translation.yml
client-portal/: package-lock.json
client-portal/src/app/: page.tsx
infrastructure/: deploy.sh  main.tf  variables.tf
local_code_agent/: __init__.py  config.py  main.py  requirements.txt  server.py
local_code_agent/agent/: __init__.py  cli.py  code_agent.py  translation_graph.py  translation_graph_phase1.py
local_code_agent/brain/a7b8afb7-b6df-4d7c-9252-618f5c7ff174/scratch/: inspect_loki.py  test_loki.py
local_code_agent/llm/: __init__.py
local_code_agent/prompts/: __init__.py
local_code_agent/tools/: __init__.py  file_tools.py  search_tools.py  shell_tools.py
mcp_loki_openai_agent/: README.md  requirements.txt
mcp_loki_openai_agent/agent/: agent.py  ia_interface.py
mcp_loki_openai_agent/analyzer/: fortran_analyzer.py  loki_integration.py
mcp_loki_openai_agent/examples/: solver.f90
mcp_loki_openai_agent/mcp_context/: context.py
ollama/: entrypoint.sh
scripts/: bench_gpu.sh  get_gpu_ip.sh  test_gpu.sh
