[project]
name = "local-code-agent"
version = "0.1.0"
description = "A 100% Private MCP Coding Assistant and Scientific Porting Pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CodeAgent", email = "auto@example.com" }
]
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-mistralai>=0.1",
    "langchain-openai>=0.1",
    "loki @ file://localhost/Users/loicmaurin/PycharmProjects/coding-agent/loki",
    "python-dotenv>=1.0",
    "fastmcp>=2.10.0",
    "langgraph>=0.2.0",
    "numpy",
    "Cython>=3.0",
    "pytest",
    # JAX — Phase 2 pipeline (expérimental)
    "jax[cpu]>=0.4.0",
    "flax>=0.8.0",
    "equinox>=0.11.0",
]

[project.scripts]
# Main Server
run-mcp = "local_code_agent.server:main"

# Phase 1 : Fortran → Fortran GPU + Cython
agent-gpu      = "local_code_agent.agent.cli:run_translate_gpu"

# Phase 2 : Fortran → JAX (legacy)
agent-translate = "local_code_agent.agent.cli:run_translate"
agent-profile   = "local_code_agent.agent.cli:run_profile"

# Master dispatcher (toutes les actions)
agent-pipeline  = "local_code_agent.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
override-dependencies = ["pydantic>=2.11.7"]
